added about html and other thing too.

--- a/First/Prasen.html
+++ b/First/Prasen.html
@@ -1,10 +1,14 @@
+<!-- Use "ctrl+/" to use comment a line directly in VS-Code -->
 <!DOCTYPE html>
+<!--Our HTML Code starts here-->
 <html lang="en">
+    <!--Our head tag starts here-->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prasen</title>
+    <title>Prasenjit Nayak</title>
 </head>
+<!--Our body Code starts here-->
 <body>
     Hello Prasen
 </body>
