Learned about meta data and how to link css and js file to the html file

--- a/First/Prasen.html
+++ b/First/Prasen.html
@@ -4,9 +4,16 @@
 <html lang="en">
     <!--Our head tag starts here-->
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prasenjit Nayak</title>
+    <meta charset="UTF-8"> <!--character set-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">  <!--It is for responsive design-->
+    <meta http-equiv="X-UA-Compatible" content="ie=edge"> <!--for those using internet explorer,this is for them -->
+    <meta name="description"content="this is description">
+    <meta name="keywords" content="html,html learning, web development">
+    <!-- <meta name="robots" content="NOINDEX, NOFOLLOW"> THIS IS USED TO NOT FOLLOW YOUR WEBSITE IN SERACH ENGINES, OR TO SHOW IT ON SERACH ENGINE-->    
+    <meta name="robots" content="INDEX, FOLLOW"> <!-- This is used to show our website as well as to show and visible our webstie in search engine-->
+    <link rel="stylesheet" href="Prasen.css"> <!-- This is a method to include external css in our html file -->
+    <script src="Prasen.js"></script> <!-- This is a method to include external JavaScript in your html file -->
+    <title>Prasenjit Nayak</title>    
 </head>
 <!--Our body Code starts here-->
 <body>
