--- a/HTML/Entities.html
+++ b/HTML/Entities.html
@@ -16,7 +16,10 @@
         <p>Pound is written like this &pound; </p>
         <p>Copyright is written like this &copy; </p>
         <p>Yen is written like this &yen; </p>
+        <p>Another character is &rAarr;</p>
         <a href="https://tools.w3cub.com/html-entities">All the entities chartsheet</a>
+        <p>Empty character is written like this &nbsp; </p>
+        <p>Empty character is also written like this &#160; </p>
     </div>
 </body>
 </html>
