Change the location of .md files as well as updated HTML.md file

--- a/HTML/Idsandclass.html
+++ b/HTML/Idsandclass.html
@@ -9,7 +9,7 @@
 <body>
     <h3>Ids and classes tutorial</h3>
     <div id="mainBox"class="redBg">
-        this is main box
+        this is main
     </div>
     <!-- Emmet -->
     <span class="redBg">It's span of class redBg</span>
