Learned about Developer tools on a browser

--- a/CSS/CSSSelectors.html
+++ b/CSS/CSSSelectors.html
@@ -19,5 +19,15 @@
     <div>
         <p class="newClass">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi tempora culpa consectetur.</p>
     </div>
+    <div>
+        <footer>
+            This is a footer line, and we will be customzing it.
+        </footer>
+        <span>This is an inline span line hehe.</span>
+    </div>
+    <div>
+        <p id ="Border">Bordering a line in css</p>
+    </div>
+    
 </body>
 </html>
