--- a/CSS/CSS Colors.html
+++ b/CSS/CSS Colors.html
@@ -10,5 +10,6 @@
     <h2 id="Heading">This is my First Box</h2>
     <p id ="ByName">This is colored by adding the color name in CSS</p>
     <p id ="ByRGB">This is colored by the RGB Pattern in CSS</p>
+    <p id ="HexColor">This is colored by hex-Color</p>
 </body>
 </html>
