Learned about Box model, margin and property in css

--- a/CSS/CSSBoxModel.html
+++ b/CSS/CSSBoxModel.html
@@ -8,19 +8,19 @@
 </head>
 <body>
     <h3>Going to learn about Box Model, Margin and Padding</h3>
-    <div class="Container">
+    <div class="First">
         <h3>This is my Heading</h3>
         <p id="second">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique recusandae aut repudiandae et? Vel nostrum voluptatem pariatur impedit excepturi odit, modi molestiae nihil!</p>
     </div>    
 
-    <div class="OutStanding">
+    <div class="First">
         <h3>This is my Heading</h3>
         <p id="third">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique recusandae aut repudiandae et? Vel nostrum voluptatem pariatur impedit excepturi odit, modi molestiae nihil!</p>
     </div>    
 
-    <div class="Amazing">
+    <div class="First">
         <h3>This is my Heading</h3>
-        <p id="four">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique recusandae aut repudiandae et? Vel nostrum voluptatem pariatur impedit excepturi odit, modi molestiae nihil!</p>
+        <p id="four"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique recusandae aut repudiandae et? Vel nostrum voluptatem pariatur impedit excepturi odit, modi molestiae nihil!</p>
     </div>    
     
 </body>
