Learned about css transitions

--- a/CSS/CSS Transistions.html
+++ b/CSS/CSS Transistions.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Animations in CSS</title>
+    <title>Learning Transistions CSS</title>
 </head>
-<link rel="stylesheet" href="Animations,KeyFrames.css">
+<link rel="stylesheet" href="Transistions.css">
 <body>
+    <h3>This is Learning about Transistions in CSS</h3>
     <div class="container">
-        <div class="box">
-            This is a box
+        <div id="box">
+            This is my box
         </div>
     </div>
 </body>
