Learned about javascript functions like calling functions and return function, declaring functions etc..

--- a/All about Learning/JS/JavaScript7.html
+++ b/All about Learning/JS/JavaScript7.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JavaScript String Functions</title>
+    <title>Functions in JavaScript</title>
 </head>
 <body>
-    <h2>JavaScript String Functions</h2>
+    Funcitons in JavaScript
 </body>
-<script src="JavaScript4.js"></script>
+<script src="JavaScript7.js"></script>
 </html>
