--- a/All about Learning/JS/JavaScript15.html
+++ b/All about Learning/JS/JavaScript15.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>This is math object tutorial</h1>
+        <h1>This is math object Leanring</h1>
     </div>
 </body>
 <script src="JavaScript15.js"></script>
